--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@ title: Hello
     <div class="row">
         <div class="container text__black">
             <div class="col-lg-10 col-lg-offset-1 section-intro">
-                <h2 class="section-headline">Digital ist besser! </h2>
+                <h2 class="section-headline">Mit digitalen Tools die Gesellschaft  von morgen gestalten </h2>
                 <p>
-                   Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium f&uuml;r Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gef&ouml;rdert wird. </br>
-                   <br> Wir f&uuml;hren verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch &uuml;berregionalen Jugendverb&auml;nde und Initiativen zusammen – deutschlandweit. </br>
-
+                   Wie können Jugendliche das Internet in Zeiten von Hate Speech und Populismus als positiven Gestaltungsspielraum zurückerobern? Die Demokratielabore entwickeln Workshops rund um Digitalisierung, Technologien und gesellschaftliches Miteinander.
                 </p>
                 <div class="btn-wrap">
-                    <a href="/projekt"><button  class="btn btn-start color-1">Mehr erfahren!</button> </a>
+                    <a href="/info"><button  class="btn btn-start color-1">Über das Projekt</button> </a>
                 </div>
             </div>
         </div>
@@ -71,6 +69,30 @@ title: Hello
         </div>
         <div class="btn-wrap">
             <a href="/blog"><button  class="btn btn-start color-2">Alle Blogbeiträge ansehen</button> </a>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="jumbotron fond__grey-bright">
+        <div class="row">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2 class="section-headline text-center">Mach mit bei den Demokratielaboren</h2>
+                </div>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <div class="post-teaser-wrap">
+                    <div class="row">
+                       <p class="text-center">
+                            Wir sind immer auf der Suche nach außerschulischen Einrichtungen, in denen unsere Workshops stattfinden können. Vielmehr sind wir aber in langfristige Kooperationen interessiert, um unsere Inhalte auch nachhaltig an die Jugendlichen zu bringen. 
+                       </p>
+                    </div>
+                     <div class="btn-wrap">
+                        <a href="/mitmachen"><button  class="btn btn-start color-3">Erfahre wie du mitmachen kannst</button> </a>
+                    </div>
+                    <img  class="img-responsive" src="/static/img/mitmachen-start.png" alt="Wimmelbild CC BY-SA 4.0">
+                </div>
+            </div>
         </div>
     </div>
 </div>
