--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: "Mitmachen!"
+hide_hero: true
 ---
 
 
@@ -9,80 +10,55 @@ title: "Mitmachen!"
 <div class="parallax"></div>
 </div>
 
-<div class="beneath-sections jumbotron fond__white margin-top-huge">
-    <div class="container text__black">
+<div class="row">
+    <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="section-headline">Wer kann bei den Demokratielaboren mitmachen?</h1>
-                <p>
-                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr &uuml;ber Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br>
-                </p>
-                <a class="post-teaser-read-more" href="#Jugendliche">mehr erfahren</a>
-
-                <p>
-                   Zum anderen richten wir uns an <strong>p&auml;dagogische Fachkr&auml;fte und Jugendeinrichtungen</strong>, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verst&auml;ndliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu k&ouml;nnen.<br>
-                </p>
-                <a class="post-teaser-read-more" href="#Jugendeinrichtung">mehr erfahren</a>
-
-                <p>
-                   Auch als <strong>Jugendverband, Tr&auml;ger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas &uuml;ber digitales und datengest&uuml;tzte Arbeit lernen. <br>
-                </p>
-                <a class="post-teaser-read-more" href="#Jugendverband">mehr erfahren</a>
-
-                <p>
-                   Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen &amp; Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
-                </p>   
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1 class="section-headline text-center">Wer kann bei den Demokratielaboren mitmachen?</h1>
+                    <p class="text-center">
+                       Wir richten uns hauptsächlich an <a class="highlight-grey" href="#Jugendliche">Jugendliche</a>. Für die Unterstützung von Jugendlichen bieten wir aber ergänzend Angebote für
+                        <a class="highlight-grey" href="#Jugendeinrichtung">p&auml;dagogische Fachkr&auml;fte und Jugendeinrichtungen</a> und 
+                        <a class="highlight-grey" href="#Jugendverband">Jugendverbände sowie Tr&auml;ger und Einrichtungen der Kinder- und Jugendarbeit</a>
+                    </p>
+                     <img  class="img-responsive" src="/static/img/mitmachen-start.png" alt="Wimmelbild CC BY-SA 4.0">
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="beneath-sections jumbotron fond_darkblue_gradient" id="Jugendliche">  <a name="anchor_jugendliche"></a>
-    <div class="container text__white">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="section-headline">Als Jugendliche*r</h2>
-               <p class="text">
-                    Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner N&auml;he sind. Falls nicht, schreib uns gerne eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b> und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren k&ouml;nnen.
-               </p>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="parallax"></div>
+    <div class="col-xs-12 fond_green_gradient jumbotron" id="Jugendliche">
+        <div class="row">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2 text__white">
+                    <h2 class="section-headline">Für Jugendliche</h2>
+                    <p class="text">
+                        Du hast Lust dir unsere Workshops anzuschauen und Lust an ihnen teilzunehmen? Nice! Es gibt mehrere Möglichkeiten: Schau am besten erstmal auf unserer Startseite oder unter Workshops, ob wir bald in deiner N&auml;he sind. Falls nicht, frag einfach mal in einer Jugendeinrichtung deiner N&auml;he, ob sie uns einladen wollen oder schreib uns auf Instagram, Facebook oder Twitter an. Wenn du eine Mailadresse hast, kannst du uns natürlich auch eine <a class="highlight-white" href="mailto:info@demokratielabore.de">Mail schreiben.</a> Wir probieren dann in einer Einrichtung deiner N&auml;he etwas zu organisieren.
+                    </p>
+                    <p>
+                        Außerdem produzieren wir einen Youtube-Channel, auf dem du dich regelm&auml;ßig über netzpolitische Themen informieren kannst. <a class="highlight-white" href="https://www.youtube.com/channel/UCLGZBlrotKM_nuPPcvuR9SQ">Schau mal vorbei.</a>
+                   </p>
+                    </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-
- <div class="beneath-sections jumbotron fond__white" id="Jugendeinrichtung">
+<div class="beneath-sections jumbotron fond__white" id="Jugendeinrichtung">
     <div class="container text__black">
-        <div class="col-lg-10 col-lg-offset-2">
-            <h2 class="section-headline"> Als Jugendeinrichtung</h2>
-
-            <div class="fond_red_gradient join__statement text__white">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2 class="section-headline">Für Jugendeinrichtungen</h2>
                 <p>
                     <b>Schritt 1:</b> <br>
-                    Schreibt uns eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b>, wir melden uns zeitnah bei euch.  
+                    Schreibt uns eine <a class="highlight-grey" href="mailto:info@demokratielabore.de">Mail</a>, wir melden uns bei euch.  
                 </p>
-            </div>
-        </div>
-        <div class="col-lg-9 "> 
-            <div class="fond_purple_gradient join__statement text__white">
                 <p>
                     <b> Schritt 2:</b> <br>
                     Gemeinsam w&auml;hlen wir in pers&ouml;nlichen Gespr&auml;chen die Workshop- und Aktionsformate aus, die ihr kennenlernen und in eurer Einrichtung anbieten m&ouml;chtet. Im Anschluss vereinbaren wir die Fortbildungs- und Durchf&uuml;hrungstermine. 
                  </p>
-            </div>
-        </div>
-        <div class="col-lg-9 col-lg-offset-3">
-            <div class="fond_blue_gradient join__statement text__white"> 
                 <p>
                     <b>Schritt 3: </b> <br>
                     Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgew&auml;hlten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und k&ouml;nnen euch f&uuml;r weitere Durchl&auml;ufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
                 </p>
-            </div>
-        </div>
-        <div class="col-lg-9">
-            <div class="fond_red_gradient join__statement text__white">
                 <p>
                     <b>Wie geht es dann weiter? </b> <br>
                     Wenn ihr m&ouml;gt, helfen wir euch im weiteren Verlauf dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten einer Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities, zum Beispiel den <a class="highlight-white" href="https://codefor.de/">OK Labs der Open Knowledge Foundation</a>, geschehen. Auch hierf&uuml;r stehen wir euch jederzeit pers&ouml;nlich und mit finanziellen Mitteln zur Verf&uuml;gung.         
@@ -90,17 +66,46 @@ title: "Mitmachen!"
             </div>
         </div>
     </div>
- </div>
+</div>
 <div class="parallax"></div>
- <div class="beneath-sections jumbotron fond__white" id="Jugendverband">
+ <div class="beneath-sections jumbotron fond__grey-bright" id="Jugendverband">
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2 ">
-            <h2 class="section-headline" >Als Jugendverband, Tr&auml;ger und Einrichtung in der Kinder- und Jugendarbeit oder gemeinn&uuml;tzige Organisation</h2>
+            <h2 class="section-headline" > Für Fachkräfte in der Jugendarbeit</h2>
             <p class="text">
-                Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweit&auml;gigen Workshop zeigen wir euch wie ihr mehr aus Daten machen k&ouml;nnt. Zus&auml;tzlich beraten wir gemeinn&uuml;tzige Organisationen, wie sie ihre digitalen F&auml;higkeiten vertiefen und aufbauen k&ouml;nnen. Interessiert? Dann schreibt uns eine <b><a class="highlight-grey" class="text__black" href="mailto:info@demokratielabore.de">Mail.</a></b> Weitere Infos zur digitalen M&uuml;ndigkeit für gemeinn&uuml;tzige Akteure findet ihr auch bei der <a class="highlight-grey"  href="https://datenschule.de/">Datenschule</a>.      
+                Wir wollen mit Euch herausfinden: Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweit&auml;gigen Workshop zeigen wir euch wie ihr mehr aus Daten machen k&ouml;nnt. Zus&auml;tzlich beraten wir gemeinn&uuml;tzige Organisationen, wie sie ihre digitalen F&auml;higkeiten vertiefen und aufbauen k&ouml;nnen. <br> 
             </p>
+            <div class="btn-wrap">
+                <a href="/angebot/schulung/"><button  class="btn btn-start color-2">Erfahrt mehr zu Schulungen</button> </a>
+            </div>
        </div>
     </div>
  </div>
 
 </div>
+
+<div class="col-xs-12 fond_darkblue_gradient jumbotron">
+    <div class="row">
+        <div class="container">
+            <div class="col-lg-10 col-lg-offset-1 section-workshop text__white">
+                <h2 class="section-headline">Unsere Angebote</h2>
+                <p>
+                    Neben Workshops bieten wir noch weitere Angebebote für Jugendliche und Jugendeinrichtungen an, um unser Wissen auf allen Ebenen weiterzugeben.
+                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="isotope-wrap">
+                <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+                {% assign sortedAngebote = site.angebote | sort: 'title' %}
+                {% for angebot in sortedAngebote %}
+                    {% assign post = angebot %}
+                    <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                        {% include angebote-teaser-tile.html post=post %}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
