--- a/team/index.html
+++ b/team/index.html
@@ -1,6 +1,8 @@
 ---
 layout: base
 title: "&uuml;ber uns"
+hide_hero: true
+
 ---
 
 
@@ -18,79 +20,61 @@ title: "&uuml;ber uns"
         </div>
     <div class="col-lg-12">
         <div class="container text__black">
-            <div class="beneath-sections">
-                <h1 class="text-center section-headline">Und das sind wir</h1>
+            <h1 class="text-center section-headline">Und das sind wir</h1>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:sebastian.seitz@okfn.de"> <img class="img-circle member-avatar" alt="Sebastian Seitz" src="/img/avatars/sebastian.jpg"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="mailto:sebastian.seitz@okfn.de">Sebastian Seitz</a></span>Projektleiter <br> sebastian.seitz@okfn.de
                     </p>
                 </div>
-
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span>Projektmanager Workshops<br> matthias.loewe@okfn.de
                     </p>
                 </div>
-
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektmanagerin Kooperationen<br> lydia.boettcher@okfn.de
                     </p>
                 </div>
-            </div>
-
-            <div class="beneath-sections">
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin Kommunikation<br> jasmin.helm@okfn.de
                     </p>
                 </div>
-
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin Finanzen<br> paula.glaser@okfn.de
                     </p>
                 </div>
-
-                <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
-                    <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
-                    </p>
-                </div>    
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:juliane.krueger@okfn.de"><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektassistenz Finanzen<br> juliane.krueger@okfn.de
                     </p>
                 </div>
-
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design Lead<br> nadine.stammen@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design<br> nadine.stammen@okfn.de
                     </p>
                 </div>
-  
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter<br> leonard.wolf@okfn.de
                     </p>
-                </div>
-                                                                                                            
+                </div>  
                 <div class="members col-sm-6 col-lg-4">
-                    <a href="mailto:lea.pfau@okfn.de"><img class="img-circle member-avatar" alt="Lea Pfau" src="/img/avatars/lea.jpg"></a>
-                    <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfau</a> </span>Studentische Mitarbeiterin<br> lea.pfau@okfn.de
+                    <a class="members-image-wrap" href="mailto:lea.pfau@okfn.de"><img class="img-circle member-avatar" alt="Lea Pfau" src="/img/avatars/lea.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfai</a> </span>Studentische Mitarbeiterin<br> lea.pfau@okfn.de
                     </p>
-                </div>
-
+                </div>                                                                                                 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p class="members-image-content">
@@ -109,9 +93,60 @@ title: "&uuml;ber uns"
                         <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Tech Lead<br> knut.perseke@okfn.de
                     </p>
                 </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
+                    </p>
+                </div>    
             </div> 
         </div>             
     </div>
+</div>
+<div class="beneath-sections jumbotron fond__white margin-top-huge">
+    <div class="col-lg-12">
+        <div class="container text__black">
+            <h1 class="text-center section-headline">Außerdem dürfen wir mit fabelhaften Leuten zusammenarbeiten.</h1>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://medialepfade.de"><img class="img-circle member-avatar" alt="Mediale Pfade" src="/img/avatars/medialepfade.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">Mediale Pfade</a></span>unterstützen bei der pädagogischen Ausrichtung
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="https://www.nexusinstitut.de/"><img class="img-circle member-avatar" alt="Nexus Institut" src="/img/avatars/nexus.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Nexus Institut</a> </span>entwickeln die Evaluation der Workshops
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="https://www.netzpolitik.org/"><img class="img-circle member-avatar" alt="Nexus Institut" src="/img/avatars/netzpolitik.jpg"></a>
+                    <p class="members-image-content">
+                        <span class="speaker-name"><a class="text__blue" href="https://www.netzpolitik.org/e">Netzpolitik</a> </span>entwickeln die inhaltliche Ausrichtung des Youtube-Channels
+                    </p>
+                </div>
+
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://bildbauer.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/bildbauer.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">Christoph Hoppenbrock</a></span>hat die fantastischen Illustrationen gemacht 
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://vonspree.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/vonspree.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://thisisnoteden.de"> <img class="img-circle member-avatar" alt="Marie Wolf" src="/img/avatars/marie.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="http://thisisnoteden.com/">Marie Wolf</a></span>übernahm die Gestaltung unseres Handbuchs und der Bedarfsanalyse in Rekordzeit
+                    </p>
+                </div>
+            </div> 
+        </div>
+    </div>             
 </div>
 <!-- 
 <div class="beneath-sections jumbotron fond__white">
