--- a/workshops/index.html
+++ b/workshops/index.html
@@ -4,13 +4,13 @@ title: "Workshops"
 hide_hero: true
 ---
 <div class="row">
-    <div class="col-xs-12 fond__grey-mid jumbotron">
+    <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                     <h2 class="section-headline">Workshops, Workshops, Workshops</h2>
                     <p>
-                        Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten zu besiegt.
+                        Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten zu besiegt.
                     </p>
                 </div>
             </div>
@@ -22,6 +22,30 @@ hide_hero: true
                         {% assign post = workshop %}
                         <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
                             {% include workshop-teaser-tile.html post=post %}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 fond_darkblue_gradient jumbotron">
+        <div class="row">
+            <div class="container">
+                <div class="col-lg-10 col-lg-offset-1 section-workshop text__white">
+                    <h2 class="section-headline">Weitere Angebote</h2>
+                    <p>
+                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen auf allen Ebenen weitergeben. Dazu haben wir ein umfrangreiche weitere Anehbote. Schaut her!
+                    </p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="isotope-wrap">
+                    <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+                    {% assign sortedAngebote = site.angebote | sort: 'title' %}
+                    {% for angebot in sortedAngebote %}
+                        {% assign post = angebot %}
+                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                            {% include angebote-teaser-tile.html post=post %}
                         </div>
                     {% endfor %}
                 </div>
