--- a/projekt/index.html
+++ b/projekt/index.html
@@ -72,7 +72,7 @@ title: "Projekt"
             </div>
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, hat uns bei diesem Vorhaben das <a href="https://www.nexusinstitut.de">Forschungsinstitut Nexus</a> aus Berlin begleitet, alle fünf Workshops aus 2017 evaluiert und auf ihre Wirksamkeit hin überprüft. Die Ergebnisse, Instrumente und Methoden der Evaluation stellen wir in <a href="https://github.com/okfde/demokratielabore/assets/blog/Abschlussbericht_nexus.pdf" download="assets/blog/Abschlussbericht_nexus.pdf">diesem Abschlussbericht</a> unter freier Lizenz zur Verfügung.   
+                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, hat uns bei diesem Vorhaben das <a href="https://www.nexusinstitut.de">Forschungsinstitut Nexus</a> aus Berlin begleitet, alle fünf Workshops aus 2017 evaluiert und auf ihre Wirksamkeit hin überprüft. Die Ergebnisse, Instrumente und Methoden der Evaluation stellen wir in <a href="/assets/blog/Abschlussbericht_nexus.pdf" download="/assets/blog/Abschlussbericht_nexus.pdf">diesem Abschlussbericht</a> unter freier Lizenz zur Verfügung.   
                 </p>
             </div>
         </div>
