--- a/presse/index.html
+++ b/presse/index.html
@@ -11,19 +11,36 @@ hide_hero: true
             <div class="col-lg-8 col-lg-offset-2">
                 <h1 class="text-center section-headline">Infomaterial</h1>
                 <p>
-                    Hier findet ihr alle Infomaterialien zum Download:
-                <a class="btn-download" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf"><span>Projektbeschreibung Demokratielabore</span></a>
+                    <a class="btn-download" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a>
                 <br>
                 <h1> Pressespiegel </h1>
-                <div><span class="bold">06.01.2018</span> | <a href="https://www.fritz.de/programm/sendungen/sendungen/40/trackback/2017/180106-trb-550-henrike-moeller.html" target="_blank">Neues Webvideo-Format über Netzpolitik</a> (Fritz Radio/rbb)</div></ul>
-                <div><span class="bold">04.11.2017</span> | <a href="http://www.spielbar.de/149292/escape-the-room-auf-der-play17" target="_blank">Escape the Room auf der PLAY17</a> (spielbar-Jugendredaktion)</div></ul>
-                <div><span class="bold">04.11.2017</span> | <a href="http://www.spielbar.de/149285/auch-ein-escape-room-kann-politisch-sein" target="_blank">Auch ein Escape-Room kann politisch sein</a> (spielbar-Jugendredaktion)</div></ul>
-                <div><span class="bold">27.10.2017</span> | <a href="#"  target="_blank"> Interview mit Sebastian Seitz zu den Demokratielaboren</a> (Radio Bremen Zwei)</div></ul>
-                <div><span class="bold">20.10.2017</span> | <a href="#"  target="_blank"> Anklam: Action im Bahnhof</a> (Ostsee Zeitung)</div></ul>
-
-                <br> Presseanfragen bitte an: <b><a class="text__blue text__black" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
+                <p>
+                    06.01.2018 <br> 
+                    <a href="https://www.fritz.de/programm/sendungen/sendungen/40/trackback/2017/180106-trb-550-henrike-moeller.html" target="_blank">Neues Webvideo-Format über Netzpolitik</a> (Fritz Radio/rbb)<br> <br> 
+                    04.11.2017<br>
+                    <a href="http://www.spielbar.de/149292/escape-the-room-auf-der-play17" target="_blank">Escape the Room auf der PLAY17</a> (spielbar-Jugendredaktion)<br><br>
+                    04.11.2017<br>
+                    <a href="http://www.spielbar.de/149285/auch-ein-escape-room-kann-politisch-sein" target="_blank">Auch ein Escape-Room kann politisch sein</a> (spielbar-Jugendredaktion)<br><br>
+                    27.10.2017<br>
+                    <a href="#"  target="_blank"> Interview mit Sebastian Seitz zu den Demokratielaboren</a> (Radio Bremen Zwei)<br><br>    
+                    20.10.2017<br>
+                    <a href="#"  target="_blank"> Anklam: Action im Bahnhof</a> (Ostsee Zeitung)
                 </p>
             </div>
+        </div>
+    </div>
+</div>
+<div class="fond__grey-bright join__statement">
+    <div class="container text-center">
+        <div class="row">
+            <h2>Ihr habt Presseanfragen oder wollt noch mehr Infos?</h2> 
+            <h2> Dann meldet euch am besten bei Jasmin</h2>
+            <div class="members justify-content-md-center">
+                <a class="members-image-wrap" href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
+            </div>
+            <p>
+                <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin Kommunikation<br>jasmin.helm@okfn.de
+            </p>
         </div>
     </div>
 </div>
