--- a/team/index.html
+++ b/team/index.html
@@ -106,17 +106,17 @@ hide_hero: true
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="col-lg-12">
         <div class="container text__black">
-            <h1 class="text-center section-headline">Außerdem dürfen wir mit fabelhaften Leuten zusammenarbeiten.</h1>
+            <h1 class="text-center section-headline">Außerdem dürfen und durften wir mit fabelhaften Leuten zusammenarbeiten.</h1>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://medialepfade.de"><img class="img-circle member-avatar" alt="Mediale Pfade" src="/img/avatars/medialepfade.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">Mediale Pfade</a></span>unterstützen bei der pädagogischen Ausrichtung
+                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span>unterstützten uns 2017 bei der pädagogischen Ausrichtung
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://www.nexusinstitut.de/"><img class="img-circle member-avatar" alt="Nexus Institut" src="/img/avatars/nexus.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Nexus Institut</a> </span>entwickeln die Evaluation der Workshops
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Nexus Institut</a> </span>entwickelten 2017 die Evaluation der Workshops
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
