--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Hello
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                         <h2 class="section-headline">Workshops, Workshops, Workshops</h2>
                         <p>
-                            Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten zu besiegt.
+                            Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
                         </p>
                 </div>
             </div>
