--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ title: Hello
                 <div class="post-teaser-wrap">
                     <div class="row">
                        <p class="text-center">
-                            Wir sind immer auf der Suche nach außerschulischen Einrichtungen, in denen unsere Workshops stattfinden können. Vielmehr sind wir aber in langfristige Kooperationen interessiert, um unsere Inhalte auch nachhaltig an die Jugendlichen zu bringen. 
+                            Wir sind immer auf der Suche nach außerschulischen Einrichtungen, in denen unsere Workshops stattfinden können. Vielmehr sind wir aber an langfristigen Kooperationen interessiert, um unsere Inhalte auch nachhaltig an die Jugendlichen zu bringen. 
                        </p>
                     </div>
                      <div class="btn-wrap">
