--- a/info/index.html
+++ b/info/index.html
@@ -12,7 +12,7 @@ hide_hero: true
                     <div class="col-lg-10 col-lg-offset-1">
                         <h2 class="section-headline text-center">Über die Demokratielabore</h2>
                         <p class="text-center">
-                            Wir zeigen Jugendlichen mit digitalen Werkzeugen zu Teilhabern unserer Gesellschaft zu werden. Jugendliche können in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten zu besiegt.
+                            Wir zeigen Jugendlichen, wie sie mit digitalen Werkzeugen aktiv die Gesellschaft mitgestalten. Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
                         </p>
                     </div>
                     <img  class="img-responsive" src="/static/img/wimmelbild.png" alt="Wimmelbild CC BY-SA 4.0">
